# noobagents

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: sre-orchestrator.md
docs/: AGENTS_USE.md  QUICKGUIDE.md  SCALING.md
infra/: Dockerfile
src/: config.py  main.py
src/agent/: prompts.py  state.py  triage_agent.py
src/api/: dependencies.py  models.py  routes.py
src/database/: models.py  repository.py
src/integrations/: base.py  email.py  slack.py  storage.py  ticketing.py
src/knowledge/: common_patterns.py  ecommerce_context.py  severity_rules.py
src/middleware/: error_handler.py  guardrails.py  validation.py
src/observability/: logging_config.py  metrics.py  tracing.py
src/utils/: multimodal.py  parsers.py  sanitization.py
tests/: conftest.py  test_api.py  test_guardrails.py  test_integrations.py  test_knowledge.py
