[project]
name = "sre-triage-agent"
version = "0.1.0"
description = "Production-ready SRE Incident Intake & NOOBS Agent for e-commerce platforms"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",
    # Agent framework & LLM
    "pydantic-ai>=0.2.0",
    "google-genai>=1.0.0",
    "anthropic>=0.49.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.37",
    "aiosqlite>=0.21.0",
    # Observability
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-exporter-otlp-proto-http>=1.30.0",
    "python-json-logger>=3.3.0",
    "prometheus-client>=0.22.0",
    # Integrations
    "httpx>=0.28.0",
    "aiosmtplib>=3.0.2",
    "pillow>=11.1.0",
    # Utilities
    "python-dotenv>=1.1.0",
    "email-validator>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.1.0",
    "ruff>=0.11.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
]
